--- a/templates/lista_libros/index.html.twig
+++ b/templates/lista_libros/index.html.twig
@@ -1,35 +1,41 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Lista de Libros!{% endblock %}
+
+
+{% block title %}index{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Lista de Libros! ✅</h1>
-
-    Aqui estan los libros:
-    
-    <table>
-        <thead>
-            <tr>
-                <th>Titulo</th>
-                <th>Autor</th>
-                <th>fecha</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for book in libros %}
-                <tr>
-                    <td>{{ book.title }}</td>
-                    <td>{{ book.author }}</td>
-                    <td>{{ book.publicado | date('d-m-Y') }}</td>
-                </tr>   
-            {% endfor %}
-        </tbody>
-    </table>
+<div class="container mt-5">
+    <div class="card custom-card">
+        <div class="card-header custom-card-header">
+            <h1>Lista de Libros! ✅</h1>           
+        </div>
+        <div class="card-body custom-card-body">
+            <p>Aquí están los libros:</p>
+            <div class="table-responsive">
+                <table class="table table-striped">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th>Título</th>
+                            <th>Autor</th>
+                            <th>Fecha</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for book in libros %}
+                            <tr>
+                                <td>{{ book.title }}</td>
+                                <td>{{ book.author }}</td>
+                                <td>{{ book.publicado | date('d-m-Y') }}</td>
+                            </tr>   
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock %}
+
+
+
