--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,21 +2,61 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Bienvenidos{% endblock %}</title>
+    <title>
+        {% block title %}Bienvenidos{% endblock %}
+    </title>
     <link rel="icon" href="{{ asset('favicon.ico') }}">
     <!-- Incluir Bootstrap CSS desde un CDN -->
     <link   href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
             rel="stylesheet">
-    {% block stylesheets %}{% endblock %}
+    {% block stylesheets %}
+    {% endblock %}
 </head>
 <body>
-    {% block body %}{% endblock %}
+    <div class="container"> 
+        <div class="row">   
+            <div class="col">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <div class="container-fluid">
+                        <a class="navbar-brand" href="#">Navbar</a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                            <div class="navbar-nav">
+                                <a class="nav-link active" aria-current="page" href="/">Libros</a>
+                                <a class="nav-link" href="/vencidos">Dashboard</a>  
+                            </div>
+                        </div>
+                    </div>
+                </nav>                    
+            </div>
+        </div>
+
+        <div class="row">
+            {% block header %}
+            {% endblock %}
+        </div>
+
+        <div class="row">
+            <div class="col">
+                {% block body_left %}
+                {% endblock %}
+            </div>
+            <div class="col">
+                {% block body_right %}
+                {% endblock %}
+            </div>
+    </div>
+
     <!-- Incluir jQuery (opcional, solo si necesitas jQuery) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- Incluir Bootstrap JS desde un CDN -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    {% block javascripts %}{% endblock %}
+
+    {% block javascripts %}
+    {% endblock %}
 </body>
 </html>
 
